_sass/_base.scss
/* ... */
// Publications

.publications {
  margin-top: 2rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 2rem;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  h2 {
    margin-bottom: 1rem;

    span {
      font-size: 1.5rem;
    }
  }

  h2.bibliography {
    color: var(--global-divider-color);
    border-top: 1px solid var(--global-divider-color);
    padding-top: 1rem;
    margin-top: 2rem;
    text-align: right;
  }

  ol.bibliography {
    list-style: none;
    padding: 0;
    margin-top: 0;

    li {
      margin-bottom: 1rem;

      .preview {}

      .abbr {
        height: 2rem;
        margin-bottom: 0.5rem;

        abbr {
          display: inline-block;
          background-color: var(--global-theme-color);
          padding-left: 1rem;
          padding-right: 1rem;

          a {
            color: white;

            &:hover {
              text-decoration: none;
            }
          }
        }

        .award {
          color: var(--global-theme-color) !important;
          border: 1px solid var(--global-theme-color);
          padding-left: 1rem;
          padding-right: 1rem;
        }
      }

      .title {
        font-weight: bolder;
      }

      .paper-label {
        display: inline-block;
        background-color: #bbbbbb;
        color: #ffffff;
        border-radius: 3px;
        padding: 0.1em 0.3em;
        margin-right: 0.2em;
        font-size: 0.8em;
        font-weight: 400;
        line-height: 1;
        vertical-align: middle;
        /* border: 1px solid red; for debugging */
      }

      .author {
        a {
          border-bottom: 1px dashed var(--global-theme-color);

          &:hover {
            border-bottom-style: solid;
            text-decoration: none;
          }
        }

        >em {
          border-bottom: 1px solid;
          font-style: normal;
        }

        >span.more-authors {
          color: var(--global-text-color-light);
          border-bottom: 1px dashed var(--global-text-color-light);
          cursor: pointer;

          &:hover {
            color: var(--global-text-color);
            border-bottom: 1px dashed var(--global-text-color);
          }
        }
      }

      .links {
        a.btn {
          color: var(--global-text-color);
          border: 1px solid var(--global-text-color);
          padding-left: 0.6rem;
          padding-right: 0.6rem;
          padding-top: 0.1rem;
          padding-bottom: 0.1rem;
          margin-left: 0;
          font-size: 0.75rem;

          &:hover {
            color: var(--global-theme-color);
            border-color: var(--global-theme-color);
          }
        }

        a.award.btn {
          border-color: var(--global-highlight-color);
        }
      }

      .badges {
        padding-bottom: 0.5rem;

        span {
          display: inline-block;
          color: $black-color;
          height: 100%;
          padding-right: 0.5rem;
          vertical-align: middle;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      .hidden {
        font-size: 0.875rem;
        max-height: 0px;
        overflow: hidden;
        text-align: justify;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;

        p {
          line-height: 1.4em;
          margin: 10px;
        }

        pre {
          font-size: 1em;
          line-height: 1.4em;
          padding: 10px;
        }
      }

      .hidden.open {
        max-height: 100em;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;
      }

      div.abstract.hidden {
        border: dashed 1px var(--global-bg-color);
      }

      div.abstract.hidden.open {
        border-color: var(--global-text-color);
      }
    }

    div.award.hidden {
      border: dashed 1px var(--global-bg-color);
    }

    div.award.hidden.open {
      border-color: var(--global-highlight-color);
    }
  }
}
/* ... */

